K8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flyeasy
  labels:
    app: flyeasy
    env: production
